--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,8 +5,15 @@ repos:
       - id: mdformat
         args: [ --number, --wrap, "100" ]
         additional_dependencies:
+          - mdformat-beautysh
+          - mdformat-black
+          - mdformat-config
+          - mdformat-frontmatter
+          - mdformat-footnote
+          - mdformat-gfm
+          - mdformat-gfm-alerts
+          - mdformat-pyproject
+          - mdformat-simple-breaks
           - mdformat-toc
           - mdformat-tables
-          - mdformat-footnote
-          - mdformat-frontmatter
         language_version: python3.10
