--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,4 +22,24 @@ repos:
       hooks:
         - id: codespell
           files: \.(md)$
-          args: ["--write-changes"]
+  - repo: https://github.com/streetsidesoftware/cspell-cli
+    rev: v9.0.1
+    hooks:
+      - id: cspell # Spell check changed files
+      - id: cspell # Spell check the commit message
+        name: check commit message spelling
+        args:
+          - --no-must-find-files
+          - --no-progress
+          - --no-summary
+          - --files
+          - .git/COMMIT_EDITMSG
+        stages: [commit-msg]
+        always_run: true
+  - repo: local
+    hooks:
+      - id: sort-cspell-words
+        name: Sort cspell words in YAML
+        entry: python3 ./pre-commit-hooks/sort-cspell-words.py
+        language: system
+        files: ^\.cspell\.yaml$
