--- a/.cspell.yaml
+++ b/.cspell.yaml
@@ -1,42 +1,41 @@
-version: "0.2"
+version: '0.2'
 language: en
 words:
-  - beautysh
-  - chrono
-  - codespell
-  - consteval
-  - constexpr
-  - constinit
-  - cppcheck
-  - cppreference
-  - CRTP
-  - decltype
-  - deque
-  - EDITMSG
-  - frontmatter
-  - glvalue
-  - ifdef
-  - Liskov
-  - lldb
-  - lvalue
-  - maxlevel
-  - mdformat
-  - metaprogramming
-  - microbenchmarking
-  - minlevel
-  - noexcept
-  - NRVO
-  - nullptr
-  - postconditions
-  - prvalue
-  - pyenv
-  - pyproject
-  - RAII
-  - rvalue
-  - SFINAE
-  - Stroustrup
-  - TSAN
-  - valgrind
-  - venv
-  - vtables
-  - xvalue
+- alppa
+- beautysh
+- chrono
+- codespell
+- consteval
+- constexpr
+- constinit
+- cppcheck
+- cppreference
+- CRTP
+- decltype
+- deque
+- EDITMSG
+- frontmatter
+- glvalue
+- ifdef
+- Liskov
+- lldb
+- lvalue
+- mdformat
+- Metaprogramming
+- Microbenchmarking
+- noexcept
+- NRVO
+- nullptr
+- Postconditions
+- prvalue
+- pyenv
+- pyproject
+- RAII
+- Rvalue
+- SFINAE
+- Stroustrup
+- TSAN
+- valgrind
+- venv
+- vtables
+- xvalue
