--- a/.cspell.yaml
+++ b/.cspell.yaml
@@ -22,6 +22,7 @@ words:
 - jthread
 - Liskov
 - lldb
+- longjmp
 - lvalue
 - maxlevel
 - mdformat
@@ -37,6 +38,7 @@ words:
 - pyproject
 - RAII
 - Rvalue
+- setjmp
 - SFINAE
 - stringstream
 - Stroustrup
